<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_course"
			android:title="@string/course"/>
		<item
			android:id="@+id/nav_score"
			android:title="@string/score"/>
		<item
			android:id="@+id/nav_leave"
			android:title="@string/leave"/>
		<item
			android:id="@+id/nav_bus"
			android:title="@string/bus"/>
		<item
			android:id="@+id/nav_simcourse"
			android:title="@string/simcourse"
			android:visible="false"/>
		<item
			android:id="@+id/nav_messages"
			android:title="@string/messages"/>
		<item
			android:id="@+id/nav_about"
			android:title="@string/about"/>
		<item
			android:id="@+id/nav_settings"
			android:title="@string/settings"/>
	</group>
</menu>